Version 0.9.1   unreleased

    * Fix TestSummary output to work properly with new Gradle 2 suite names.
    * Adjust CedarGwtOnGae plugin to work properly with gradle-appengine-plugin.

Version 0.9.0   13 Jul 2015

    * Initial conversion to Gradle 2, tested with Gradle v2.5.
    * Remove usage of org.gradle.util.Jvm in CedarGwtOnGaePluginConvention.
    * Remove usage of org.gradle.util.Jvm in CedarJavadocPluginConvention.
    * Adjust TestTask constructor to match the new Gradle 2 parent class.
    * Switch from gradle-gae-plugin to gradle-appengine-plugin.

Version 0.8.17  13 Jun 2015

   * Fix Cucumber-related bug where check for Selenium version reports incorrect warning.

Version 0.8.16  09 Jun 2015

   * Improve Cucumber JSON output by merging first and second pass results.
   * Fix CedarProperties plugin to trim input values to null rather than leaving empty strings.
   * Clarify Javadoc around how versions are used in CedarCucumberPluginExtension.

Version 0.8.14  17 Mar 2015

   * Improve support for publishing to a real Maven URL.

Version 0.8.13  16 Mar 2015

   * Add support for a real Maven repository URL so we can publish to Maven Central.

Version 0.8.12  01 Dec 2014

   * Update the devmode boot process to account for changes in GWT 2.7.0 relative to RC1.

Version 0.8.11  08 Nov 2014

   * Update CedarGwtOnGae to understand new GWT 2.7.0-rc1's -noSuperDevMode flag in dev mode.

Version 0.8.10  26 Sep 2014

   * Use %n rather than \n in TestSummary.groovy.
   * Catch number format exceptions when parsing server wait configuration.
   * Support custom formatters for Cucumber output.
   * Add configuration for memory and permgen space.
   * Add support for "analysis" like code metrics and coverage.
   * Support headless mode on Linux for the devmode server and Cucumber tests.
   * Implement a two-pass mode for Cucumber, where failed tests are automatically retried.

Version 0.8.9   11 Dec 2013
