@@ -17,7 +17,7 @@
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 // *
 // * Author   : Kenneth J. Pronovici <pronovic@ieee.org>
-// * Language : Gradle (>= 1.7)
+// * Language : Gradle (>= 2.5)
 // * Project  : Common Gradle Build Functionality
 // *
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
